Fixes being on the Existing Tickets Tab (and other tabs that have a datagrid) covers up the dropdown for the Administration page (https://github.com/ADefWebserver/ADefHelpDesk/projects/1#card-82588188)

--- a/ADefHelpDeskWebApp/wwwroot/css/site.css
+++ b/ADefHelpDeskWebApp/wwwroot/css/site.css
@@ -5,6 +5,14 @@
     flex-direction: column;
 }
 
+.customToolbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+}
+
 .main {
     flex: 1;
 }
